# 46411-Design-of-large-composite-structures---A1

./: .gitignore  Notes.txt  TurbineBlade.py  coeffs_thickness.csv  loads.csv  materials.yml  parametric_study_Uniax_mat.py  parametric_study_t_spar.py  task1.py  task1_and_2.py  turbine_blade.py
_data/: coeffs_chord.csv  coeffs_spar_cap_width.csv  layup.csv  materials.yml
classical_laminate_theory/: pyproject.toml
classical_laminate_theory/src/classical_laminate_theory/: __init__.py
classical_laminate_theory/src/classical_laminate_theory/failure/: __init__.py  base.py  tsai_hill.py  tsai_wu.py
classical_laminate_theory/src/classical_laminate_theory/laminate/: __init__.py  builder.py  laminate.py  solver.py
classical_laminate_theory/src/classical_laminate_theory/materials/: __init__.py  base.py  equivalent_lamina.py  isotropic.py  orthotropic.py
classical_laminate_theory/src/classical_laminate_theory/ply/: __init__.py  ply.py
direct_stiffness/src/direct_stiffness/: __init__.py  cross_section.py  system.py
